# KL-Films-RAG

./: README.md  main.py  pyproject.toml
cinema_rag/data/: raw_listings.json
cinema_rag/rag/: chunker.py  cleaner.py  context_builder.py  embedder.py  loader.py  retriever.py  vector_store.py
desgin_decision_logs/: v0.1_semantic_units.md  v1.0_RAG_for_param_matching.md  v1.1.1_cosine_embedding.md  v1.1.2_npx_vectors.md  v1.1.3_intent_handling.md  v1.1_MCP_RAG_system_design.md  v2.0_function_calls_MCP.md  v3.0_determinstic_functions_not_MCP.md
experiments/parse_intent/: INTENT_PARSER_EXPERIMENTS_GUIDE.md  experiments.py  run_experiments.py  test_cases.py
experiments/parse_intent/results/: baseline_pi_v1_0.json  baseline_pi_v1_1.json
kl_mcp_rag/: app.py  pipeline_handler.py  query_pre_processor.py
kl_mcp_rag/constants_and_types/: listings.py  pipeline.py
kl_mcp_rag/data/: films.json  films.npz  raw_listings_v1.json
kl_mcp_rag/determinisitic_lookups/: lookup_router.py  lookups.py
kl_mcp_rag/llm/: parse_intent.py
kl_mcp_rag/llm/parse_dates/: parse_dates.py  utils.py
kl_mcp_rag/llm/parse_intent/: llm_models.py  parser.py  parser_versions.py  prompts.py
kl_mcp_rag/mcp_server/: client.py  server.py
kl_mcp_rag/rag/: build_index.py  index.py  resolve_film.py
