[project]
name = "kl-mcp-rag"
version = "0.1.0"
description = "MCP-backed RAG system for querying independent cinema listings"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",     # embeddings + LLM calls
    "numpy>=1.24.0",     # vector math
    "mcp>=0.1.0"         # MCP server integration
]

[tool.setuptools]
packages = [
    "kl_mcp_rag",
    "kl_mcp_rag.rag",
    "kl_mcp_rag.llm",
    "kl_mcp_rag.constants",
    "kl_mcp_rag.mcp_server"
]